<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rounded_white"
        android:padding="@dimen/_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_event_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:background="@color/transparent_black"
                android:textSize="@dimen/_14dp"
                android:textStyle="bold"
                tools:text="Title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:orientation="vertical">

            <vcci.consumer.android.util.RoundRectCornerImageView
                android:id="@+id/iv_event"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_124dp"
                android:scaleType="fitXY" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photos"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/start_date"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11dp"
                    android:textStyle="normal"
                    tools:text="Start Date : " />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/end_date"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11dp"
                    android:textStyle="normal"
                    tools:text="End Date : " />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/time"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11dp"
                    android:textStyle="normal"
                    tools:text="Time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/venue"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_venue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11dp"
                    android:textStyle="normal"
                    tools:text="Venue" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="@string/in_association_with"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_in_association"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12dp"
                    android:textStyle="normal"
                    tools:text="Association with" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_11dp"
                    android:textStyle="bold" />

                <WebView
                    android:id="@+id/wv_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <!--<TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Description"
                    android:textColor="@android:color/black"
                    android:textStyle="normal"
                    android:textSize="@dimen/_12dp"/>-->

            </LinearLayout>


        </LinearLayout>




        </LinearLayout>


    </ScrollView>

</RelativeLayout>